[package]
name = "cc4"
version = "0.1.2"
authors = ["adamnemecek <adamnemecek@gmail.com>"]
edition = "2018"
license = "MIT"
description ="Very simple implementation of the four_cc/fourcc algorithm as a const fn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
